--- a/appspec.yml
+++ b/appspec.yml
@@ -23,10 +23,8 @@ os: linux
 #   "files" section altogether. A blank or incomplete "files" section
 #   may cause associated deployments to fail.
 files:
-  - source: docs/index.html
-    destination: /docs/index.html
-  - source: docs/index.css
-    destination: /docs/index.css
+  - source: /
+    destination: /var/www/html
 # For deployments to Amazon Linux, Ubuntu Server, or RHEL instances,
 #   you can specify a "permissions" 
 #   section here that describes special permissions to apply to the files 
