Made gradle f***ing work. Sort of. Run 'gradlew test' with gradle installed (you can use gradle.bat in the project folder to install it on windows) to build and run tests. Haven't figured out how to make Android Studio do this on its own yet.

--- a/FindersKeepers/app/build.gradle
+++ b/FindersKeepers/app/build.gradle
@@ -17,6 +17,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    sourceSets {
+        test {
+            java {
+                srcDirs = ["/src/test/java/cse403/finderskeepers"]
+            }
+        }
+    }
 }
 
 dependencies {
