--- a/appspec.yml
+++ b/appspec.yml
@@ -13,10 +13,5 @@ permissions:
        - file
 hooks:
    BeforeInstall:
-    - location: scripts/installapache.sh
-      runas: root
-    - location: scripts/startapache.sh
-      runas: root
-   AfterInstall:
-    - location: scripts/restartapache.sh
+    - location: startServer.sh
       runas: root
