hopefully fixed gradle setting in circle.yml

--- a/circle.yml
+++ b/circle.yml
@@ -3,5 +3,5 @@ test:
     - pip install flask
   override:
     - python -m unittest discover -s ./server/tests -v
-    - FindersKeepers/gradlew test
+    - gradle test
 
