--- a/circle.yml
+++ b/circle.yml
@@ -1,10 +1,13 @@
 general:
   build_dir: FindersKeepers
 
+dependencies:
+  pre:
+    - rm ./gradlew
+  
 test:
   pre:
     - pip install flask
-    - rm ./gradlew
   override:
     - python -m unittest discover -s ./server/tests -v
     - gradle test
