--- a/circle.yml
+++ b/circle.yml
@@ -4,7 +4,9 @@ general:
 dependencies:
   pre:
     - rm ./gradlew
-    - wget "https://services.gradle.org/distributions/gradle-2.14.1-bin.zip"; unzip gradle-2.14.1-bin.zip
+    - sudo add-apt-repository ppa:cwchien/gradle -y
+    - sudo apt-get update
+    - sudo apt-get install gradle-2.14.1
   
 test:
   pre:
