--- a/circle.yml
+++ b/circle.yml
@@ -12,6 +12,6 @@ test:
   pre:
     - pip install flask
   override:
-    - python -m unittest discover -s ./server/tests -v
+    - python -m unittest discover -s .././server/tests -v
     - gradle test
 
