--- a/circle.yml
+++ b/circle.yml
@@ -1,16 +1,15 @@
 dependencies:
   pre:
     #- rm FindersKeepers/gradlew
-    #- sudo add-apt-repository ppa:cwchien/gradle -y
-    #- sudo apt-get update
-    #- sudo apt-get install gradle-2.14.1
-    - gradle dependencies
+    - sudo add-apt-repository ppa:cwchien/gradle -y
+    - sudo apt-get update
+    - sudo apt-get install gradle-2.14.1
   
 test:
   pre:
     - pip install flask
   override:
     - python -m unittest discover -s ./server/tests -v
-    - cd FindersKeepers; gradle test
+    - cd FindersKeepers; gradle testReleaseUnitTest
     
 
