--- a/circle.yml
+++ b/circle.yml
@@ -1,9 +1,9 @@
-dependencies:
-  pre:
+#dependencies:
+  #pre:
     #- rm FindersKeepers/gradlew
-    - sudo add-apt-repository ppa:cwchien/gradle -y
-    - sudo apt-get update
-    - sudo apt-get install gradle-2.14.1
+    #- sudo add-apt-repository ppa:cwchien/gradle -y
+    #- sudo apt-get update
+    #- sudo apt-get install gradle-2.14.1
   
 test:
   pre:
