--- a/circle.yml
+++ b/circle.yml
@@ -10,6 +10,6 @@ test:
     - pip install flask
   override:
     - python -m unittest discover -s ./server/tests -v 
-    - cd FindersKeepers; chmod +x gradlew; ./gradlew cleanTest test
+    - cd FindersKeepers; chmod +x gradlew; ./gradlew cleanTest test -i
     
 
