trying to get flask working on AWS: borrowed apache code + command to run flask with relative URL and root declaration

--- a/appspec.yml
+++ b/appspec.yml
@@ -17,7 +17,8 @@ hooks:
       runas: root
     - location: scripts/startapache.sh
       runas: root
-    - location: scripts/startServer.sh
+    - location: startServer.sh
+      runas: root
    AfterInstall:
     - location: scripts/restartapache.sh
       runas: root
