--- a/appspec.yml
+++ b/appspec.yml
@@ -6,19 +6,7 @@ files:
 permissions:
    - object: /var/www/html
      pattern: "**"
-     owner: apache
-     group: apache
-     mode: 755
+     owner: ec2-user
+     mode: 777
      type:
        - file
-hooks:
-   BeforeInstall:
-    - location: scripts/installapache.sh
-      runas: root
-    - location: scripts/startapache.sh
-      runas: root
-    - location: startServer.sh
-      runas: root
-   AfterInstall:
-    - location: scripts/restartapache.sh
-      runas: root
