--- a/FindersKeepers/app/src/main/AndroidManifest.xml
+++ b/FindersKeepers/app/src/main/AndroidManifest.xml
@@ -11,8 +11,7 @@
         <activity
             android:name=".HomePage"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".SignInActivity"
             android:label="@string/title_activity_sign_in"
@@ -23,6 +22,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".UserSettingsActivity"
+            android:label="@string/title_activity_user_settings"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
