--- a/FindersKeepers/app/build.gradle
+++ b/FindersKeepers/app/build.gradle
@@ -26,6 +26,11 @@ android {
             }
         }
     }
+    signingConfigs {
+        debug {
+            storeFile file("debug.keystore");
+        }
+    }
 }
 
 dependencies {
