--- a/FindersKeepers/app/src/main/AndroidManifest.xml
+++ b/FindersKeepers/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="cse403.finderskeepers">
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
