Added View Trade Layout

--- a/FindersKeepers/app/src/main/AndroidManifest.xml
+++ b/FindersKeepers/app/src/main/AndroidManifest.xml
@@ -56,6 +56,10 @@
         <activity
             android:name=".ViewTradesActivity"
             android:label="@string/title_activity_view_trades"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ViewUserTradeActivity"
+            android:label="@string/title_activity_view_user_trade"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
