added search users by radius and made update_user have optional parameters

--- a/circle.yml
+++ b/circle.yml
@@ -10,6 +10,7 @@ test:
     - pip install flask
     - pip install flask-mysql
     - pip install boto
+    - pip install zipcode
   override:
     - python -m unittest discover -s ./server/tests -v 
     - cd FindersKeepers; chmod +x gradlew; ./gradlew cleanTest testDebugUnitTest -i
